# valjaren

./: .gitignore  LICENSE  README.md  pyproject.toml  se.danielnylander.valjaren.desktop
.tx/: config
po/: sv.mo  sv.po  valjaren.pot
src/valjaren/: __init__.py  main.py
